--- a/pom.xml
+++ b/pom.xml
@@ -10,24 +10,24 @@
 
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
-    <artifactId>bootstrap-datepicker</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
-    <name>Bootstrap Datepicker</name>
-    <description>WebJar for Bootstrap Datepicker</description>
+    <artifactId>bootstrap-datetimepicker</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>Bootstrap DateTime Picker</name>
+    <description>WebJar for Bootstrap DateTime Picker</description>
     <url>http://webjars.org</url>
 
     <licenses>
         <license>
             <name>Apache License</name>
-            <url>https://github.com/eternicode/bootstrap-datepicker/blob/master/LICENSE</url>
+            <url>https://github.com/smalot/bootstrap-datetimepicker/blob/master/LICENSE</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
 
     <scm>
-        <url>http://github.com/webjars/bootstrap-datepicker</url>
-        <connection>scm:git:https://github.com/webjars/bootstrap-datepicker.git</connection>
-        <developerConnection>scm:git:https://github.com/webjars/bootstrap-datepicker.git</developerConnection>
+        <url>http://github.com/webjars/bootstrap-datetimepicker</url>
+        <connection>scm:git:https://github.com/webjars/bootstrap-datetimepicker.git</connection>
+        <developerConnection>scm:git:https://github.com/webjars/bootstrap-datetimepicker.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
@@ -41,8 +41,8 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstreamVersion>1.0.1</upstreamVersion>
-        <sourceUrl>https://github.com/eternicode/bootstrap-datepicker/archive</sourceUrl>
+        <upstreamVersion>6aa746736d</upstreamVersion>
+        <sourceUrl>https://github.com/smalot/bootstrap-datetimepicker/archive</sourceUrl>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstreamVersion}</destDir>
     </properties>
     
