Exclude sample and screenshot folders.

--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/bootstrap-datetimepicker-${upstreamVersion}" excludes="tests/,build/" />
+                                    <fileset dir="${project.build.directory}/bootstrap-datetimepicker-${upstreamVersion}" excludes="tests/,build/,sample/,screenshot/" />
                                 </move>
                             </target>
                         </configuration>
