--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap-datetimepicker</artifactId>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.2.0</version>
     <name>Bootstrap DateTime Picker</name>
     <description>WebJar for Bootstrap DateTime Picker</description>
     <url>http://webjars.org</url>
@@ -28,7 +28,7 @@
         <url>http://github.com/webjars/bootstrap-datetimepicker</url>
         <connection>scm:git:https://github.com/webjars/bootstrap-datetimepicker.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/bootstrap-datetimepicker.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>bootstrap-datetimepicker-2.2.0</tag>
     </scm>
 
     <developers>
@@ -84,17 +84,17 @@
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
                                     <fileset dir="${project.build.directory}/bootstrap-datetimepicker-${upstreamVersion}">
-                                        <exclude name="tests/"/>
-                                        <exclude name="build/"/>
-                                        <exclude name="sample/"/>
-                                        <exclude name="sample in bootstrap v2/"/>
-                                        <exclude name="sample in bootstrap v3/"/>
-                                        <exclude name="screenshot/"/>
-                                        <exclude name="less/"/>
-                                        <exclude name="bower.json"/>
-                                        <exclude name=".travis.yml"/>
-                                        <exclude name="README.md"/>
-                                        <exclude name="minify.sh"/>
+                                        <exclude name="tests/" />
+                                        <exclude name="build/" />
+                                        <exclude name="sample/" />
+                                        <exclude name="sample in bootstrap v2/" />
+                                        <exclude name="sample in bootstrap v3/" />
+                                        <exclude name="screenshot/" />
+                                        <exclude name="less/" />
+                                        <exclude name="bower.json" />
+                                        <exclude name=".travis.yml" />
+                                        <exclude name="README.md" />
+                                        <exclude name="minify.sh" />
                                     </fileset>
                                 </move>
                             </target>
