--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,29 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap-datetimepicker</artifactId>
-    <version>2.2.1-SNAPSHOT</version>
+    <version>2.2.0-1-SNAPSHOT</version>
     <name>Bootstrap DateTime Picker</name>
     <description>WebJar for Bootstrap DateTime Picker</description>
     <url>http://webjars.org</url>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <upstreamVersion>2.2.0</upstreamVersion>
+        <sourceUrl>https://github.com/smalot/bootstrap-datetimepicker/archive</sourceUrl>
+        <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstreamVersion}</destDir>
+        <requirejs>
+            {
+                "paths": {
+                    "bootstrap-datepicker": "js/bootstrap-datepicker.js"
+                },
+                "shim": {
+                    "bootstrap-datepicker":  {
+                        "deps" : [ "jquery" ]
+                    }
+                }
+            }
+        </requirejs>
+    </properties>
 
     <licenses>
         <license>
@@ -43,13 +62,6 @@
             <email>leonids.maslovs@galeoconsulting.com</email>
         </developer>
     </developers>
-    
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstreamVersion>2.2.0</upstreamVersion>
-        <sourceUrl>https://github.com/smalot/bootstrap-datetimepicker/archive</sourceUrl>
-        <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstreamVersion}</destDir>
-    </properties>
     
     <build>
         <plugins>
@@ -105,7 +117,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>2.5</version>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.5.1</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>sonatype-nexus-staging</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
             </plugin>
         </plugins>
     </build>
