--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>bootstrap-datetimepicker</artifactId>
-    <version>2.3.1</version>
+    <version>2.3.2-SNAPSHOT</version>
     <name>Bootstrap DateTime Picker</name>
     <description>WebJar for Bootstrap DateTime Picker</description>
     <url>http://webjars.org</url>
@@ -47,7 +47,7 @@
         <url>http://github.com/webjars/bootstrap-datetimepicker</url>
         <connection>scm:git:https://github.com/webjars/bootstrap-datetimepicker.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/bootstrap-datetimepicker.git</developerConnection>
-        <tag>bootstrap-datetimepicker-2.3.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
